# sdr

./: LoRa-convo.md  LoRa-convo2.md  README.md  capture_iq_soapysdr.py  wifi_pkt_mon__prequisites.md
duplex/: txrx2_live.py  txrx_live.py
general_radio/: sdr_core_info
grok/: waterfall_2_4ghz.grc  waterfall_scan.py
lora/: capture_iq_soapysdr.py  capture_lime_iq.sh  decode_lora_batch.sh  decode_one.sh  lora_scan_capture.py
lora/captures/: decode_lora.sh  lime_868100000Hz_10000000sps_4s_cs16_20250818T222815Z.cs16.json  lime_868100000Hz_10000000sps_8s_cs16_20250818T223017Z.cs16.json  lime_868100000Hz_1000000sps_5s_cf32_20250818T231441Z.cf32.json  lime_868100000Hz_1000000sps_5s_cf32_20250818T231452Z.cf32.json  lime_868100000Hz_1000000sps_5s_cf32_20250818T231501Z.cf32.json  lime_868100000Hz_1000000sps_5s_cf32_20250818T231513Z.cf32.json  lime_868100000Hz_1000000sps_5s_cf32_20250818T231522Z.cf32.json  lime_868100000Hz_1000000sps_5s_cf32_20250818T231531Z.cf32.json  lime_868100000Hz_30720000sps_4s_cs16_20250818T223049Z.cs16.json  (+1 more)
sdr_intro/: contents.md  python_report_lab_code_for_editing_appendix.md  python_report_lab_code_for_editing_primer.md
wifi/: README.md  setup.sh  wifi_band_sweep.py  wifi_channels_uk.json  wifi_live_fft.py  wifi_live_filtered_fft.py  wifi_scan.py  zigbee_sniffer_toolkit.md  zigbee_sweep.py
wifi/packets&signals/: CMakeLists.txt  build.ps1  build.sh  g-petey.md  how_dooes_this_slot_into_wa.md  wifi_capture.cpp
wifi_intro/: radio_transmit.sh
wifiscan-py311/: pyvenv.cfg
zigbee_out/: zigbee_periods_1756611286.csv  zigbee_sweep_1756611286.csv
(+81 files in other folders)
